--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "author": {
-    "name": "Hỏi Dân IT vs Eric",
-    "url": "https://hoidanit.com.vn"
+    "name": "Redux Saga Learning",
+    "url": "https://google.com"
   },
   "scripts": {
     "dev": "vite",
